[gd_scene load_steps=6 format=3 uid="uid://3e0m0ecqfskn"]

[ext_resource type="Script" path="res://Scripts/CrearPersonaje/LorePersonaje.gd" id="1_2alyc"]
[ext_resource type="PackedScene" uid="uid://bknqfi0yc6xe0" path="res://Escenas/CrearPersonaje/opcionRazaYClase.tscn" id="2_7p1ef"]
[ext_resource type="Script" path="res://Scripts/CrearPersonaje/EstadisticasPersonaje/botonesVolverSiguiente.gd" id="4_hv6t4"]

[sub_resource type="Theme" id="Theme_uon3e"]
default_font_size = 23
BoxContainer/constants/separation = 14
GridContainer/constants/h_separation = 4
GridContainer/constants/v_separation = 20
HBoxContainer/constants/separation = 6
Label/font_sizes/font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scc2i"]
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.686275, 0.686275, 0.686275, 1)

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_uon3e")
script = ExtResource("1_2alyc")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -362.0
offset_top = -642.0
offset_right = 362.0
offset_bottom = 640.0
color = Color(0, 0.00392157, 0.0509804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = -358.0
offset_top = -640.0
offset_right = 358.0
offset_bottom = 638.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="CabezaTitulo" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scc2i")

[node name="ContTitulo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CabezaTitulo"]
layout_mode = 2
alignment = 1

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer/CabezaTitulo/ContTitulo"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "DND Creador de Personajes"
horizontal_alignment = 1

[node name="Datos" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="LNombre" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Nombre"

[node name="Nombre2" type="LineEdit" parent="MarginContainer/VBoxContainer/Datos"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="LRaza" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Raza"

[node name="Raza" parent="MarginContainer/VBoxContainer/Datos" instance=ExtResource("2_7p1ef")]
layout_mode = 2
tipoOpcion = "raza"

[node name="LClase" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Clase"

[node name="Clase" parent="MarginContainer/VBoxContainer/Datos" instance=ExtResource("2_7p1ef")]
layout_mode = 2
tipoOpcion = "clase"

[node name="LTamaño" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Tamaño"

[node name="Tamaño" type="LineEdit" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "SS"
editable = false

[node name="LEdad" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Edad"

[node name="Edad" type="SpinBox" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
size_flags_horizontal = 0
rounded = true

[node name="LGenero" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Genero"

[node name="Genero" type="OptionButton" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
size_flags_horizontal = 0
item_count = 3
popup/item_0/text = "M"
popup/item_0/id = 0
popup/item_1/text = "F"
popup/item_1/id = 1
popup/item_2/text = "NB"
popup/item_2/id = 2

[node name="LAltura" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Altura"

[node name="Altura" type="SpinBox" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
size_flags_horizontal = 0
step = 0.01
suffix = "KG"

[node name="LPeso" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Peso"

[node name="Peso" type="SpinBox" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
size_flags_horizontal = 0
max_value = 1000.0
suffix = "KG"

[node name="LLenguajes" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Lenguajes Conocidos
"

[node name="Lenguajes" type="LineEdit" parent="MarginContainer/VBoxContainer/Datos"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="LVision" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Vision"

[node name="Vision" type="LineEdit" parent="MarginContainer/VBoxContainer/Datos"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="LPersonalidad" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Personalidad"

[node name="Personalidad" type="TextEdit" parent="MarginContainer/VBoxContainer/Datos"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Personalidad"

[node name="LDescripcion" type="Label" parent="MarginContainer/VBoxContainer/Datos"]
layout_mode = 2
text = "Descripcion"

[node name="Descripcion" type="TextEdit" parent="MarginContainer/VBoxContainer/Datos"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
placeholder_text = "Descripcion"

[node name="Botones" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 10
alignment = 1
script = ExtResource("4_hv6t4")
rutaVolver = "res://Escenas/MenuPrincipal/menu_principal.tscn"
rutaSiguiente = "res://Escenas/CrearPersonaje/EstadisticasPersonaje.tscn"

[node name="Volver" type="Button" parent="MarginContainer/VBoxContainer/Botones"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "Volver"

[node name="Siguiente" type="Button" parent="MarginContainer/VBoxContainer/Botones"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Siguiente"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Datos/Raza/BotonOpcion" to="." method="_on_boton_opcion_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Botones/Volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Botones/Siguiente" to="." method="_on_siguiente_pressed"]

[editable path="MarginContainer/VBoxContainer/Datos/Raza"]
[editable path="MarginContainer/VBoxContainer/Datos/Clase"]
